# Sparkle

./: CMakeLists.txt  README.md  amcl.launch  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  navigation_client.py  navigation_client_first_try.py
rviz/: display.rviz
scripts/: CarDetector.py  Preprocess.py  drive.py  pidcal.py  slidewindow_test.py
scripts/camera/: CurveDetector.py  Preprocess.py  Rotary.py  StopDetector.py  drive.py  slidewindow.py  slidewindow_test.py  warper.py
scripts/camera/test/: Preprocess_test.py  drive_test.py  pidcal_test.py  warper_test.py  (+1 more)
scripts/control/: callback.py  dynamic_obstacle.py  main_drive.cpp  main_drive.py  motor_control.py  pidcal.py  set_traffic.py  static_obstacle.py  test.py  yaw_drive.py
scripts/lidar/: control_motor.py  obstacle_mode.py
src/: CarDetector.py  CurveDetector.py  LaneDetector.py  Preprocess.py  Slidewindow.py  main_drive.py  pidcal.py  test_warp.py  warper.py
src/Sparkle/: CMakeLists.txt  README.md  navigation_client_edu.py  navigation_client_sub.py  package.xml
src/Sparkle/launch/: telop.launch
src/Sparkle/scripts/camera/: CurveDetector.py  LaneDetector.py  Preprocess.py  Rotary.py  StopDetector.py  drive.py  rotary_test.py  slidewindow.py  slidewindow_test.py  traffic.py  warper.py
src/Sparkle/scripts/camera/test/: slidewindow_test2.py  warper_test.py
src/Sparkle/scripts/control/: byeon.py  dynamic_obstacle.py  lidarteam_main.py  main_drive.py  main_drive_0202.py  main_drive_0204.py  note.py  note2.py  note3.py  note_0203.py  pidcal.py  set_traffic.py  static_obstacle.py
src/Sparkle/scripts/lidar/: obstacle_mode.py  obstacle_mode_0204.py
src/learning_tf/: CMakeLists.txt  package.xml
src/lidar/: convert_lidar.cpp
src/wego/: CMakeLists.txt  package.xml
src/wego/launch/: gmapping.launch  navigation.launch  teleop.launch
src/wego/maps/: map.pgm  map1.pgm  map_test.pgm
src/wego/rviz/: display.rviz  global_local_path.rviz  navigation.rviz  navigation2.rviz  slam.rviz
src/wego/scripts/: navigation_client.py  pub_odom.py  test.py
src/wego/src/: convert_lidar.cpp
src/wego_2d_nav/: CMakeLists.txt  package.xml
src/wego_2d_nav/launch/: amcl.launch  move_base.launch
src/wego_2d_nav/params/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
src/wego_2d_nav/scripts/: cmd_vel_to_ackermann.py
(+14 files in other folders)
